Changing from Jpeg to H.264 mode no longer causes OpenVideo to be called twice. The underlying video stream is deactivated while the HLS player dialog is open. Minor improvements to HLS dialog. Added a message in the clip list for the condition that no clips are returned. Refactored Stats For Nerds dialog. Deleted a piece of dead code related to the old "Enable H.264 module" context menu item. The stoplight button now uses the "cursor: pointer" style. Dialogs should no longer be able to appear with their title bars offscreen when being centered on a small screen.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -998,6 +998,7 @@ div.icon, a.icon
 {
 	float: right;
 	padding: 3px;
+	cursor: pointer;
 }
 
 #stoplightRed
@@ -1426,6 +1427,7 @@ div.icon, a.icon
 	text-align: center;
 	padding: 10px;
 	font-size: 16px;
+	white-space: normal;
 }
 
 #clipsbody
